infrastructure/argocd-ts-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tailscale
  namespace: argocd
  annotations:
    tailscale.com/hostname: "argo-cd-kube"
    tailscale.com/backend-protocol: "https"
    tailscale.com/tags: "tag:k8s-operator"
    tailscale.com/tls-skip-verify: "true"
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
